# macoq

./: CMakeLists.txt  run_tests.sh
.cache/clangd/index/: common.h.06488113E8C6EB2E.idx  dummy.c.0E74BA411D5DC037.idx  macoq.c.90BDA289BAFB1A8F.idx  macoq.h.4F8C5B39402608C8.idx
src/: macoq.c
tests/: CMakeLists.txt  common.h  dummy.c
